fix button text align display on ios

--- a/styles.css
+++ b/styles.css
@@ -65,6 +65,7 @@ button {
     color: black;
     border-radius: 3px;
     font-size: 20px;
+    display: block;
 }
 
 button:hover {
